django_codenerix_email (4.0.42) stable; urgency=medium

  * Added ignore to prevent decoding errors while processing messages for mixed encodes

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 20 Oct 2025 06:45:00 +0200


django_codenerix_email (4.0.41) stable; urgency=medium

  * Prevent crashes from invalid charsets in received messages

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 20 Oct 2025 06:40:00 +0200


django_codenerix_email (4.0.40) stable; urgency=medium

  * Corrected the way EmailMessage show bounces to improve performance

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 08:06:00 +0200


django_codenerix_email (4.0.39) stable; urgency=medium

  * Added options to chosse the IMAP selector and to DELETE emails or set them as SEEN for a more granular control

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 08:06:00 +0200


django_codenerix_email (4.0.38) stable; urgency=medium

  * Added filtering support for IMAP receiving emails

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 07:00:00 +0200


django_codenerix_email (4.0.37) stable; urgency=medium

  * Content Subtype removed from send()

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 12:31:00 +0200


django_codenerix_email (4.0.36) stable; urgency=medium

  * Deprecation warning repaired

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 12:08:00 +0200


django_codenerix_email (4.0.35) stable; urgency=medium

  * Email commands deprecated to a new more standard name

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 11:48:00 +0200


django_codenerix_email (4.0.34) stable; urgency=medium

  * Removed forgotten print in the code

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 11:07:00 +0200


django_codenerix_email (4.0.33) stable; urgency=medium

  * Command recv_emails wont't fail if silent is enabled

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 07:49:00 +0200

